# fuzzy_branch_rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
